# AgentBankz

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GUIDE.md  MacUsersGuide.md  README.md  campos_sugeridos_graphrag.md  docker-compose.yml  github_agent.ipynb  main.py  pyproject.toml  reproduce_chroma.py
chroma_db/: chroma.sqlite3
chroma_tools/: __init__.py  tools.py
data/chunks/: luis_baez_memory_v1.txt
graph_tools/: __init__.py  tools.py
knowledge/: chroma_subagents_info.md  deepagents_filesystem_backend.md
notebooks/: ag-ui.ipynb  graph_builder.ipynb  graphrag.ipynb  helper.py
notebooks/frontend/: index.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
notebooks/frontend/src/: App.tsx  globals.css  main.tsx
src/agentbankz/agents/: __init__.py  gmail.py  loader.py  orchestrator_factory.py  orchestrators.yml  subagents.yml
src/agentbankz/backends/: postgres.py
src/agentbankz/orchestrators/: orchestrators.yml
src/agentbankz/subagents/: loader.py  subagents.yml
src/agentbankz/tools/: github.py  knowledge.py  mcp_adapter.py  obsidian.py  zapier.py
src/agentvault/agents/: __init__.py  loader.py  orchestrators.yml
src/agentvault/backends/: __init__.py  factory.py
zapier_tools/: __init__.py  adapters.py  client.py
