[project]
name = "agentbankz"
version = "0.1.0"
description = "YAML-driven multi-agent orchestration with ChromaDB knowledge and Gmail automation via Zapier MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.1",
    "deepagents-backends",
    "httpx>=0.27.0",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langgraph-api>=0.8.7",
    "langgraph-cli>=0.4.26",
    "fastmcp>=3.3.1",
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.42.0",
    "copilotkit>=0.1.91",
    "ag-ui-langgraph>=0.0.35",
    "langchain>=1.2.0",
    "langgraph>=1.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentbankz.orchestrators" = ["*.yml"]

[tool.uv.sources]
deepagents-backends = { git = "https://github.com/DiTo97/deepagents-backends.git" }
